[gd_scene load_steps=2 format=3 uid="uid://bs4fgag3km3uu"]

[ext_resource type="Script" uid="uid://dgsehe2nr2sgu" path="res://scripts/ui/MainMenu.gd" id="1_i26rj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i26rj")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
